syntax = "proto3";

option go_package = "./articlePb";

message articleData {
  string slug = 1 [json_name = "slug"];
  string title = 2;
  string description = 3;
  string body = 4;
  repeated string tagList = 5;
  int64 createdAt = 6;
  int64 updatedAt = 7;
  int64 deleteAt = 10;
  int64 author_id = 9;
}